<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:section="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar"/>

    <pl.dawidgdanski.tictactoe.ui.view.SectionLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        section:header_text="@string/game_modes">

        <Button
            android:id="@+id/button_human_vs_human"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/human_vs_human"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button_human_vs_cpu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/human_vs_cpu"/>

        <Button
            android:id="@+id/button_cpu_vs_cpu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpu_vs_cpu"/>

    </pl.dawidgdanski.tictactoe.ui.view.SectionLayout>

</RelativeLayout>
